[gd_scene load_steps=13 format=3 uid="uid://c1d8cys4vmj4j"]

[ext_resource type="Script" path="res://world.gd" id="1_3yeg1"]
[ext_resource type="Material" uid="uid://db51nkkwbeiey" path="res://cannon/flash_yellow.tres" id="1_tkijr"]
[ext_resource type="Material" uid="uid://elvms6jwikv3" path="res://world_material.tres" id="1_x04e8"]
[ext_resource type="Material" uid="uid://wqe5qwy1o1dr" path="res://cannon/base/cannon_cart.tres" id="2_3hkp8"]
[ext_resource type="PackedScene" uid="uid://deyaenfl2w7rc" path="res://cannon/cannon.tscn" id="2_5q5oy"]
[ext_resource type="PackedScene" uid="uid://djfk04ehelpqe" path="res://crown/crown.tscn" id="2_wfnel"]
[ext_resource type="AudioStream" uid="uid://btdtdvntkp4ex" path="res://crown/410364__benjaminnelan__metal-hit.wav" id="7_26m84"]
[ext_resource type="AudioStream" uid="uid://bi8obj1h6j81r" path="res://crown/glass_shatter.wav" id="8_jjj6m"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pjw4f"]
size = Vector3(100, 100, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_34rb6"]
size = Vector3(100, 100, 5)

[sub_resource type="BoxShape3D" id="BoxShape3D_mrg7a"]
size = Vector3(5, 100, 50)

[sub_resource type="BoxShape3D" id="BoxShape3D_5vfmy"]
size = Vector3(50, 1, 100)

[node name="World" type="Node3D"]
script = ExtResource("1_3yeg1")

[node name="Torch" type="Node3D" parent="."]
transform = Transform3D(0.999936, -0.00594902, -0.00961277, -0.0110621, -0.3397, -0.940469, 0.00232936, 0.940515, -0.339744, -17.7316, 7.62881, -27.791)

[node name="CSGSphere3D" type="CSGSphere3D" parent="Torch"]
transform = Transform3D(1, -1.86265e-09, 4.12911e-09, -1.86265e-09, 1, -1.86265e-09, 1.09139e-10, 0, 1, -0.025938, 0.0142708, -2.70706)
material = ExtResource("1_tkijr")

[node name="CSGBox3D" type="CSGBox3D" parent="Torch"]
transform = Transform3D(1, -4.65661e-10, 1.34241e-09, -4.65661e-10, 1, -4.65661e-10, 1.16415e-10, 0, 1, 0, 0, 0)
size = Vector3(0.5, 0.5, 5)
material = ExtResource("2_3hkp8")

[node name="OmniLight3D" type="OmniLight3D" parent="Torch"]
transform = Transform3D(1, 5.86733e-08, 1.86265e-09, 9.31323e-10, 1, 5.96046e-08, -1.16415e-10, -2.98023e-08, 1, -0.0268002, -0.0486584, -2.75789)
light_color = Color(1, 0.658824, 0.0745098, 1)
light_energy = 4.0
omni_range = 20.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="CrownLight" type="OmniLight3D" parent="."]
transform = Transform3D(0.999936, -0.00594899, -0.00961283, -0.00958151, 0.00527154, -0.99994, 0.00599931, 0.999968, 0.0052142, -6.82741, 4.45314, -7.84236)
light_color = Color(1, 1, 0.321569, 1)
omni_range = 14.003

[node name="Walls" type="StaticBody3D" parent="."]
transform = Transform3D(0.999936, 0.00961278, -0.0059491, -0.00958144, 0.99994, 0.00527161, 0.00599944, -0.00521424, 0.999968, 0.021673, -0.595522, -8.13478)

[node name="CSGBox3D2" type="CSGBox3D" parent="Walls"]
transform = Transform3D(1, 2.12094e-09, 5.4948e-08, -3.74966e-08, 1.00002, -1.07102e-08, -6.14673e-08, 1.35042e-08, 1.00002, -24.2798, 2.38419e-07, 1.90735e-06)
size = Vector3(45, 100, 45)
material = ExtResource("1_x04e8")

[node name="CSGBox3D2" type="CSGBox3D" parent="Walls/CSGBox3D2"]
transform = Transform3D(1, -1.73895e-09, 5.6345e-08, -3.75367e-08, 1.00002, -1.16415e-08, -6.51926e-08, 1.49012e-08, 1.00002, 0.253468, 0.00247926, -0.0081377)
operation = 2
size = Vector3(40, 90, 40)
material = ExtResource("1_x04e8")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="Walls/CSGBox3D2/CSGBox3D2"]
transform = Transform3D(5, 1.86265e-09, -1.52795e-09, -1.33878e-08, -2.17929e-07, -5, -1.86265e-09, 5, -2.21655e-07, -12.7231, 8.70585, 0.105852)
height = 50.0
sides = 10
material = ExtResource("1_x04e8")

[node name="CSGBox3D" type="CSGBox3D" parent="Walls/CSGBox3D2/CSGBox3D2"]
transform = Transform3D(5, 1.30385e-08, -1.5134e-09, -5.86442e-09, -2.17929e-07, -5, -1.49012e-08, 5, -2.19792e-07, -12.7036, 6.17093, 0.0950928)
size = Vector3(1, 50, 1)
material = ExtResource("1_x04e8")

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="Walls/CSGBox3D2/CSGBox3D2"]
transform = Transform3D(5, 1.86265e-09, -1.55705e-09, -2.82889e-08, -2.17929e-07, -5, -1.86265e-09, 5, -2.2538e-07, -0.937046, 8.81915, 0.0357351)
height = 50.0
sides = 10
material = ExtResource("1_x04e8")

[node name="CSGBox3D2" type="CSGBox3D" parent="Walls/CSGBox3D2/CSGBox3D2"]
transform = Transform3D(5, 1.30385e-08, -1.55705e-09, -2.82162e-08, -2.17929e-07, -5, -1.49012e-08, 5, -2.2538e-07, -0.796865, 6.28537, 0.0279427)
size = Vector3(1, 50, 1)
material = ExtResource("1_x04e8")

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="Walls/CSGBox3D2/CSGBox3D2"]
transform = Transform3D(5, 1.86265e-09, -1.5425e-09, -2.08383e-08, -2.17929e-07, -5, -1.86265e-09, 5, -2.23517e-07, 11.8385, 8.94196, -0.0402689)
height = 50.0
sides = 10
material = ExtResource("1_x04e8")

[node name="CSGBox3D3" type="CSGBox3D" parent="Walls/CSGBox3D2/CSGBox3D2"]
transform = Transform3D(5, 1.30385e-08, -1.52795e-09, -1.3315e-08, -2.17929e-07, -5, -1.49012e-08, 5, -2.21655e-07, 11.858, 6.40704, -0.0510283)
size = Vector3(1, 50, 1)
material = ExtResource("1_x04e8")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 1.56069e-09, 2.79397e-09, -8.92396e-09, 1, -1.39698e-09, -4.65661e-09, 0, 1, -0.0149256, 0.0129723, 22.5122)
shape = SubResource("BoxShape3D_pjw4f")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 1.56069e-09, 3.25963e-09, -9.85165e-09, 1, -1.86265e-09, -5.12227e-09, 0, 1, 0.0155265, -0.0134946, -22.4121)
shape = SubResource("BoxShape3D_34rb6")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 1.56069e-09, 2.79397e-09, -8.92396e-09, 1, -1.39698e-09, -4.65661e-09, 0, 1, -1.49287, -0.200352, 0.330882)
shape = SubResource("BoxShape3D_mrg7a")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Walls"]
transform = Transform3D(1, 1.56433e-09, 2.32831e-09, -7.99264e-09, 1, -1.39698e-09, -4.19095e-09, 0, 1, -46.486, 0.0337813, -0.0209064)
shape = SubResource("BoxShape3D_mrg7a")

[node name="Floor" type="StaticBody3D" parent="."]

[node name="CSGBox3D" type="CSGBox3D" parent="Floor"]
transform = Transform3D(0.999984, 0.00480257, -0.0029809, -0.00479473, 0.999985, 0.00262869, 0.00299349, -0.00261434, 0.999992, -23.377, -0.17551, -7.80397)
size = Vector3(50, 1, 50)
material = ExtResource("1_x04e8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(0.999987, 0.00431792, -0.00268089, -0.00431159, 0.999988, 0.00236296, 0.00269106, -0.00235137, 0.999994, -23.2769, -0.287598, -7.73399)
shape = SubResource("BoxShape3D_5vfmy")

[node name="Cannon" parent="." instance=ExtResource("2_5q5oy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -37.6585, 0.360346, -6.98483)

[node name="Camera3D" type="Camera3D" parent="Cannon"]
transform = Transform3D(-0.00539996, 0.0370109, -0.9993, -6.72084e-05, 0.999315, 0.0370118, 0.999985, 0.000267023, -0.00539377, -7.41858, 6.56985, 0.0261793)
near = 0.017
far = 109.02

[node name="Crown" parent="." instance=ExtResource("2_wfnel")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.80242, 3.68083, -7.87195)
max_contacts_reported = 5

[node name="Torch2" type="Node3D" parent="."]
transform = Transform3D(0.999936, -0.00594902, -0.00961277, -0.0110621, -0.3397, -0.940469, 0.00232936, 0.940515, -0.339744, -30.8564, 7.62881, -27.791)

[node name="CSGSphere3D" type="CSGSphere3D" parent="Torch2"]
transform = Transform3D(1, -1.86265e-09, 4.12911e-09, -1.86265e-09, 1, -1.86265e-09, 1.09139e-10, 0, 1, -0.025938, 0.0142708, -2.70706)
material = ExtResource("1_tkijr")

[node name="CSGBox3D" type="CSGBox3D" parent="Torch2"]
transform = Transform3D(1, -4.65661e-10, 1.34241e-09, -4.65661e-10, 1, -4.65661e-10, 1.16415e-10, 0, 1, 0, 0, 0)
size = Vector3(0.5, 0.5, 5)
material = ExtResource("2_3hkp8")

[node name="OmniLight3D" type="OmniLight3D" parent="Torch2"]
transform = Transform3D(1, 5.86733e-08, 1.86265e-09, 9.31323e-10, 1, 5.96046e-08, -1.16415e-10, -2.98023e-08, 1, -0.0268002, -0.0486584, -2.75789)
light_color = Color(1, 0.658824, 0.0745098, 1)
light_energy = 4.0
omni_range = 20.0

[node name="Torch3" type="Node3D" parent="."]
transform = Transform3D(-0.999936, 0.00594894, 0.0096128, -0.0110621, -0.3397, -0.940469, -0.00232927, -0.940515, 0.339744, -17.7316, 7.62881, 11.209)

[node name="CSGSphere3D" type="CSGSphere3D" parent="Torch3"]
transform = Transform3D(1, -1.86265e-09, 4.12911e-09, -1.86265e-09, 1, -1.86265e-09, 1.09139e-10, 0, 1, -0.025938, 0.0142708, -2.70706)
material = ExtResource("1_tkijr")

[node name="CSGBox3D" type="CSGBox3D" parent="Torch3"]
transform = Transform3D(1, -4.65661e-10, 1.34241e-09, -4.65661e-10, 1, -4.65661e-10, 1.16415e-10, 0, 1, 0, 0, 0)
size = Vector3(0.5, 0.5, 5)
material = ExtResource("2_3hkp8")

[node name="OmniLight3D" type="OmniLight3D" parent="Torch3"]
transform = Transform3D(1, 5.86733e-08, 1.86265e-09, 9.31323e-10, 1, 5.96046e-08, -1.16415e-10, -2.98023e-08, 1, -0.0268002, -0.0486584, -2.75789)
light_color = Color(1, 0.658824, 0.0745098, 1)
light_energy = 4.0
omni_range = 20.0

[node name="Torch4" type="Node3D" parent="."]
transform = Transform3D(-0.999936, 0.00594894, 0.0096128, -0.0110621, -0.3397, -0.940469, -0.00232927, -0.940515, 0.339744, -30.7948, 7.62881, 11.209)

[node name="CSGSphere3D" type="CSGSphere3D" parent="Torch4"]
transform = Transform3D(1, -1.86265e-09, 4.12911e-09, -1.86265e-09, 1, -1.86265e-09, 1.09139e-10, 0, 1, -0.025938, 0.0142708, -2.70706)
material = ExtResource("1_tkijr")

[node name="CSGBox3D" type="CSGBox3D" parent="Torch4"]
transform = Transform3D(1, -4.65661e-10, 1.34241e-09, -4.65661e-10, 1, -4.65661e-10, 1.16415e-10, 0, 1, 0, 0, 0)
size = Vector3(0.5, 0.5, 5)
material = ExtResource("2_3hkp8")

[node name="OmniLight3D" type="OmniLight3D" parent="Torch4"]
transform = Transform3D(1, 5.86733e-08, 1.86265e-09, 9.31323e-10, 1, 5.96046e-08, -1.16415e-10, -2.98023e-08, 1, -0.0268002, -0.0486584, -2.75789)
light_color = Color(1, 0.658824, 0.0745098, 1)
light_energy = 4.0
omni_range = 20.0

[node name="Torch5" type="Node3D" parent="."]
transform = Transform3D(0.00232932, 0.940515, -0.339744, -0.0110621, -0.3397, -0.940469, -0.999936, 0.00594896, 0.00961273, -43.4745, 15.3388, -7.58619)

[node name="CSGSphere3D" type="CSGSphere3D" parent="Torch5"]
transform = Transform3D(1, -1.86265e-09, 4.12911e-09, -1.86265e-09, 1, -1.86265e-09, 1.09139e-10, 0, 1, -0.025938, 0.0142708, -2.70706)
material = ExtResource("1_tkijr")

[node name="CSGBox3D" type="CSGBox3D" parent="Torch5"]
transform = Transform3D(1, -4.65661e-10, 1.34241e-09, -4.65661e-10, 1, -4.65661e-10, 1.16415e-10, 0, 1, 0, 0, 0)
size = Vector3(0.5, 0.5, 5)
material = ExtResource("2_3hkp8")

[node name="OmniLight3D" type="OmniLight3D" parent="Torch5"]
transform = Transform3D(1, 5.86733e-08, 1.86265e-09, 9.31323e-10, 1, 5.96046e-08, -1.16415e-10, -2.98023e-08, 1, -0.0268002, -0.0486584, -2.75789)
light_color = Color(1, 0.658824, 0.0745098, 1)
light_energy = 4.0
omni_range = 20.0

[node name="Torch6" type="Node3D" parent="."]
transform = Transform3D(-0.00232923, -0.940515, 0.339744, -0.0110621, -0.3397, -0.940469, 0.999936, -0.00594892, -0.00961287, -4.51779, 7.62881, -13.9767)

[node name="CSGSphere3D" type="CSGSphere3D" parent="Torch6"]
transform = Transform3D(1, -1.86265e-09, 4.12911e-09, -1.86265e-09, 1, -1.86265e-09, 1.09139e-10, 0, 1, -0.025938, 0.0142708, -2.70706)
material = ExtResource("1_tkijr")

[node name="CSGBox3D" type="CSGBox3D" parent="Torch6"]
transform = Transform3D(1, -4.65661e-10, 1.34241e-09, -4.65661e-10, 1, -4.65661e-10, 1.16415e-10, 0, 1, 0, 0, 0)
size = Vector3(0.5, 0.5, 5)
material = ExtResource("2_3hkp8")

[node name="OmniLight3D" type="OmniLight3D" parent="Torch6"]
transform = Transform3D(1, 5.86733e-08, 1.86265e-09, 9.31323e-10, 1, 5.96046e-08, -1.16415e-10, -2.98023e-08, 1, -0.0268002, -0.0486584, -2.75789)
light_color = Color(1, 0.658824, 0.0745098, 1)
light_energy = 4.0
omni_range = 20.0

[node name="Torch7" type="Node3D" parent="."]
transform = Transform3D(-0.00232923, -0.940515, 0.339744, -0.0110621, -0.3397, -0.940469, 0.999936, -0.00594892, -0.00961287, -4.51779, 7.62881, -0.913466)

[node name="CSGSphere3D" type="CSGSphere3D" parent="Torch7"]
transform = Transform3D(1, -1.86265e-09, 4.12911e-09, -1.86265e-09, 1, -1.86265e-09, 1.09139e-10, 0, 1, -0.025938, 0.0142708, -2.70706)
material = ExtResource("1_tkijr")

[node name="CSGBox3D" type="CSGBox3D" parent="Torch7"]
transform = Transform3D(1, -4.65661e-10, 1.34241e-09, -4.65661e-10, 1, -4.65661e-10, 1.16415e-10, 0, 1, 0, 0, 0)
size = Vector3(0.5, 0.5, 5)
material = ExtResource("2_3hkp8")

[node name="OmniLight3D" type="OmniLight3D" parent="Torch7"]
transform = Transform3D(1, 5.86733e-08, 1.86265e-09, 9.31323e-10, 1, 5.96046e-08, -1.16415e-10, -2.98023e-08, 1, -0.0268002, -0.0486584, -2.75789)
light_color = Color(1, 0.658824, 0.0745098, 1)
light_energy = 4.0
omni_range = 20.0

[node name="EndButton" type="Button" parent="."]
visible = false
offset_left = 523.0
offset_top = 354.0
offset_right = 626.0
offset_bottom = 385.0
text = "Back to Title"

[node name="HitLabel" type="Label" parent="."]
visible = false
offset_left = 532.0
offset_top = 301.0
offset_right = 578.0
offset_bottom = 346.0
theme_override_font_sizes/font_size = 32
text = "Hit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmmoLabel" type="Label" parent="."]
offset_left = 33.0
offset_top = 34.0
offset_right = 89.0
offset_bottom = 57.0
theme_override_font_sizes/font_size = 32
text = "Ammo:"

[node name="MetalHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_26m84")

[node name="GlassShatter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_jjj6m")

[connection signal="body_entered" from="Crown" to="." method="_on_crown_body_entered"]
[connection signal="pressed" from="EndButton" to="." method="_on_end_button_pressed"]
